<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity">

    <TextView
        android:id="@+id/deathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/death_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deathScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_score_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/deathTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deathTextView" />

    <TextView
        android:id="@+id/deathCurrentRankTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/current_rank_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/deathTextView"
        app:layout_constraintStart_toStartOf="@+id/deathTextView"
        app:layout_constraintTop_toBottomOf="@+id/deathScoreTextView" />

    <TextView
        android:id="@+id/deathNewRankTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/deathCurrentRankTextView"
        app:layout_constraintStart_toStartOf="@+id/deathCurrentRankTextView"
        app:layout_constraintTop_toBottomOf="@+id/deathCurrentRankTextView" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deathNewRankTextView"
        app:layout_constraintVertical_bias="0.35000002" />

    <Button
        android:id="@+id/backHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_button"
        app:layout_constraintEnd_toEndOf="@+id/playAgainButton"
        app:layout_constraintStart_toStartOf="@+id/playAgainButton"
        app:layout_constraintTop_toBottomOf="@+id/playAgainButton" />
</androidx.constraintlayout.widget.ConstraintLayout>