<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.GameActivity">

    <fragment
        android:id="@+id/arFragment"
        android:name="com.example.arbasics.utils.CleanArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/shootImageView"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/target" />

    <TextView
        android:id="@+id/ballonsCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/current_score_text" />

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/current_time_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currentLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/current_level_text" />

    <View
        android:layout_width="72dp"
        android:layout_height="4dp"
        android:layout_centerInParent="true"
        android:background="#7a000000" />

    <View
        android:layout_width="4dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:background="#7a000000" />

</RelativeLayout>