<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1080px"
    android:layout_height="2400px"
    tools:context=".ProfileAcitivity">

    <ImageView
        android:id="@+id/profileBackgroundImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backother" />

    <ImageView
        android:id="@+id/porfilePictureImageView"
        android:layout_width="273dp"
        android:layout_height="194dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_pic"
        tools:srcCompat="@drawable/user_pic" />

    <TextView
        android:id="@+id/homeUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/porfilePictureImageView"
        app:layout_constraintStart_toStartOf="@+id/porfilePictureImageView"
        app:layout_constraintTop_toBottomOf="@+id/porfilePictureImageView" />

    <TextView
        android:id="@+id/profileStatsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_stats_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/porfilePictureImageView"
        app:layout_constraintStart_toStartOf="@+id/porfilePictureImageView"
        app:layout_constraintTop_toBottomOf="@+id/homeUsernameTextView" />

    <TextView
        android:id="@+id/profileScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_score_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/profileStatsTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileStatsTextView" />

    <TextView
        android:id="@+id/profileGamesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_games_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/profileScoreTextView"
        app:layout_constraintTop_toBottomOf="@+id/profileScoreTextView" />

    <TextView
        android:id="@+id/profileRankTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_rank_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/profileStatsTextView"
        app:layout_constraintStart_toStartOf="@+id/profileStatsTextView"
        app:layout_constraintTop_toBottomOf="@+id/profileGamesTextView" />

    <TextView
        android:id="@+id/profileCurrentRankTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileRankTextView"
        app:layout_constraintStart_toStartOf="@+id/profileRankTextView"
        app:layout_constraintTop_toBottomOf="@+id/profileRankTextView"
        app:layout_constraintVertical_bias="0.19999999" />

</androidx.constraintlayout.widget.ConstraintLayout>